// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When using snapshots Should render with an element children 1`] = `
<Default__StyledSpan>
  <Modal
    className=""
    container="root"
    footer=""
    header=""
    key=".0"
    loaderLabel=""
    loading={false}
    onClose={null}
    onOpen={null}
    scrollContent={false}
    title=""
  >
    <div />
  </Modal>
</Default__StyledSpan>
`;

exports[`When using snapshots with loader Should render with an element children 1`] = `
<Default__StyledSpan>
  <Modal
    className=""
    container="root"
    footer=""
    header=""
    key=".0"
    loaderLabel="loading"
    loading={true}
    onClose={null}
    onOpen={null}
    scrollContent={false}
    title=""
  >
    <div />
  </Modal>
</Default__StyledSpan>
`;

exports[`When using snapshots with title, header and footer Should render with an element children 1`] = `
<Default__StyledSpan>
  <Modal
    className=""
    container="root"
    footer={<div />}
    header={<div />}
    key=".0"
    loaderLabel=""
    loading={false}
    onClose={null}
    onOpen={null}
    scrollContent={false}
    title="title"
  >
    <div />
  </Modal>
</Default__StyledSpan>
`;
